<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--<item
        android:id="@+id/ov_mn_forecast"
        android:contentDescription="@string/cd_menu_forecast"
        android:icon="@drawable/ic_forecast_black_24dp"
        android:title="@string/label_forecast"
        app:showAsAction="ifRoom"
        tools:icon="@drawable/ic_forecast_black_24dp"/>-->
    <item
        android:id="@+id/ov_mn_map"
        android:contentDescription="@string/cd_mn_map_buoy_location"
        android:icon="@drawable/ic_map_black_24dp"
        android:title="@string/lb_map_buoy_location"
        app:showAsAction="always"
        tools:icon="@drawable/ic_map_black_24dp" />
    <item
        android:id="@+id/ov_mn_search"
        android:contentDescription="@string/cd_mn_search_buoys"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/lb_mn_search_buoys"
        app:showAsAction="always"
        tools:icon="@drawable/ic_search_black_24dp" />

</menu>