<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_wind"
            android:gravity="start"
            android:text="@string/label_wind"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="@dimen/detail_font_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/detail_margin_start"
                android:layout_marginLeft="@dimen/detail_margin_start"
                android:layout_marginEnd="@dimen/detail_margin_end"
                android:layout_marginRight="@dimen/detail_margin_end"
                android:layout_weight="1"
                android:gravity="start"
                android:labelFor="@id/current_wind_speed"
                android:text="@string/label_current"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="@dimen/detail_font_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/detail_margin_start"
                android:layout_marginLeft="@dimen/detail_margin_start"
                android:layout_marginEnd="@dimen/detail_margin_end"
                android:layout_marginRight="@dimen/detail_margin_end"
                android:layout_weight="1"
                android:gravity="start"
                android:labelFor="@id/current_gust_speed"
                android:text="@string/label_gust"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="@dimen/detail_font_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/detail_margin_start"
                android:layout_marginLeft="@dimen/detail_margin_start"
                android:layout_marginEnd="@dimen/detail_margin_end"
                android:layout_marginRight="@dimen/detail_margin_end"
                android:layout_weight="1"
                android:gravity="start"
                android:labelFor="@id/current_wind_direction"
                android:text="@string/label_direction"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="@dimen/detail_font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/current_wind_speed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/detail_margin_start"
                android:layout_marginLeft="@dimen/detail_margin_start"
                android:layout_marginEnd="@dimen/detail_margin_end"
                android:layout_marginRight="@dimen/detail_margin_end"
                android:layout_weight="1"
                android:contentDescription="@string/cd_current_wind_speed"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="@dimen/detail_font_size"
                tools:text="4.1 kt" />

            <!--android:text="@{station_details_model.wind.speedString}"-->
            <TextView
                android:id="@+id/current_gust_speed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/detail_margin_start"
                android:layout_marginLeft="@dimen/detail_margin_start"
                android:layout_marginEnd="@dimen/detail_margin_end"
                android:layout_marginRight="@dimen/detail_margin_end"
                android:layout_weight="1"
                android:contentDescription="@string/cd_current_gust_speed"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="@dimen/detail_font_size"
                android:text="@{station_details_model.wind.gustString}"
                tools:text="5.1 kt" />

            <TextView
                android:id="@+id/current_wind_direction"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/detail_margin_start"
                android:layout_marginLeft="@dimen/detail_margin_start"
                android:layout_marginEnd="@dimen/detail_margin_end"
                android:layout_marginRight="@dimen/detail_margin_end"
                android:layout_weight="1"
                android:contentDescription="@string/cd_current_wind_direction"
                android:gravity="start"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="@dimen/detail_font_size"
                android:text="@{station_details_model.wind.directionString}"
                tools:text="N (350°)" />
        </LinearLayout>
    </LinearLayout>
</merge>