<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_temperature"
            android:gravity="start"
            android:text="@string/label_temperature"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textSize="@dimen/detail_font_size"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/detail_margin_start"
                android:layout_marginLeft="@dimen/detail_margin_start"
                android:layout_marginEnd="@dimen/detail_margin_end"
                android:layout_marginRight="@dimen/detail_margin_end"
                android:layout_weight="1"
                android:gravity="start"
                android:labelFor="@id/current_temperature"
                android:text="Current"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="@dimen/detail_font_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/detail_margin_start"
                android:layout_marginLeft="@dimen/detail_margin_start"
                android:layout_marginEnd="@dimen/detail_margin_end"
                android:layout_marginRight="@dimen/detail_margin_end"
                android:layout_weight="1"
                android:gravity="start"
                android:labelFor="@id/high_temperature"
                android:text="High"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="@dimen/detail_font_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/detail_margin_start"
                android:layout_marginLeft="@dimen/detail_margin_start"
                android:layout_marginEnd="@dimen/detail_margin_end"
                android:layout_marginRight="@dimen/detail_margin_end"
                android:layout_weight="1"
                android:gravity="start"
                android:labelFor="@id/low_temperature"
                android:text="Low"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="@dimen/detail_font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/current_temperature"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/detail_margin_start"
                android:layout_marginLeft="@dimen/detail_margin_start"
                android:layout_marginEnd="@dimen/detail_margin_end"
                android:layout_marginRight="@dimen/detail_margin_end"
                android:layout_weight="1"
                android:contentDescription="@string/cd_current_temperature"
                android:gravity="start"
                android:text="@{station_details_model.currentTemperatureString}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="@dimen/detail_font_size"
                tools:text="@string/example_current_temperature" />

            <TextView
                android:id="@+id/high_temperature"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/detail_margin_start"
                android:layout_marginLeft="@dimen/detail_margin_start"
                android:layout_marginEnd="@dimen/detail_margin_end"
                android:layout_marginRight="@dimen/detail_margin_end"
                android:layout_weight="1"
                android:contentDescription="@string/cd_high_temperature"
                android:gravity="start"
                android:text="@{station_details_model.highTemperatureString}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="@dimen/detail_font_size"
                tools:text="@string/example_high_temperature" />

            <TextView
                android:id="@+id/low_temperature"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/detail_margin_start"
                android:layout_marginLeft="@dimen/detail_margin_start"
                android:layout_marginEnd="@dimen/detail_margin_end"
                android:layout_marginRight="@dimen/detail_margin_end"
                android:layout_weight="1"
                android:contentDescription="@string/cd_low_temperature"
                android:gravity="start"
                android:text="@{station_details_model.lowTemperatureString}"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="@dimen/detail_font_size"
                tools:text="@string/example_low_temperature" />
        </LinearLayout>
    </LinearLayout>
</merge>