<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/station_list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="2dp"
    android:paddingTop="2dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/list_station_id"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|left"
                        android:layout_marginStart="16dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="1"
                        android:gravity="start|left"
                        android:textSize="14sp"
                        tools:text="@string/example_station_id" />

                    <TextView
                        android:id="@+id/list_station_distance"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|right"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="2dp"
                        android:layout_weight="1"
                        android:gravity="right|end"
                        android:textSize="14sp"
                        tools:text="@string/example_station_distance" />
                </LinearLayout>

                <TextView
                    android:id="@+id/list_station_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textSize="14sp"
                    tools:text="@string/example_station_name" />

            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/list_station_is_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:contentDescription="Station is not a favorite"
            tools:src="@drawable/ic_favorite_border_black_24dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:paddingStart="@dimen/divider_padding_left_right"
        android:paddingLeft="@dimen/divider_padding_left_right"
        android:paddingTop="@dimen/divider_padding_top_bottom"
        android:paddingEnd="@dimen/divider_padding_left_right"
        android:paddingRight="@dimen/divider_padding_left_right"
        android:paddingBottom="@dimen/divider_padding_top_bottom" />

</LinearLayout>

